fixed a few things: legends in forms, alignment in forms, uniformity of logged in nav bars, connected forget_password to flow

--- a/public/css/profile.css
+++ b/public/css/profile.css
@@ -36,7 +36,8 @@
     width: 80%;
     background: var(--dark-blue);
     padding: 1em 2em;
-    border-left: var(--button-border) solid 0.1em; 
+    border-top: var(--button-border) solid 0.1em;
+    margin-top: 1em;
 }
 
 .mini-thread {
